--- a/doc/relatorio#1.tex
+++ b/doc/relatorio#1.tex
@@ -365,30 +365,19 @@ It's important to notice that, to determine a high probability, we used $-2\sigm
 \section{Results}
 \begin{figure}[H]
         \centering
-        \includegraphics[scale=.5]{time_plot_result}
+        \includegraphics[scale=.5]{time_result_mpb}
 \end{figure}
 \begin{figure}[H]
         \centering
-        \includegraphics[scale=.5]{evaluations_plot_result}
+        \includegraphics[scale=.5]{time_result}
 \end{figure}
 \begin{figure}[H]
         \centering
-        \includegraphics[scale=.5]{correctness_plot_result}
+        \includegraphics[scale=.5]{evaluations_result}
 \end{figure}
 \begin{figure}[H]
         \centering
-        \includegraphics[scale=.5]{convergence_plot_n1000_s1}
+        \includegraphics[scale=.5]{correctness_result}
 \end{figure}
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[scale=.5]{correctness_plot_ln}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[scale=.5]{correctness_plot_lgn}
-\end{figure}
-
 \end{document}
 
